--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href="style/style.css">
   <div class="container">
   <audio id="music" autoplay muted>
-      <source src="audio/Tum Se Hi Jab We Met 320 Kbps (mp3cut.net).mp3" type="audio/mp3">
+      <source src="audio/Tum Se Hi Jab We Met.mp3" type="audio/mp3">
   </audio>
   
   
